Update kNN Regression Analysis.ipynb

--- a/kNN Regression Analysis.ipynb
+++ b/kNN Regression Analysis.ipynb
@@ -5,7 +5,7 @@
    "id": "4656be67",
    "metadata": {},
    "source": [
-    "<h3 style=\"text-align:center\"><i>Optimising the energy efficiency in Building heating and cooling systems using KNN regression model</i></h1>"
+    "<h3 style=\"text-align:center\"><i>Optimizing the energy efficiency in Building heating and cooling systems using KNN regression model</i></h1>"
    ]
   },
   {
